--- a/Draw/Controller/Feed/Cell/FeedCell.xib
+++ b/Draw/Controller/Feed/Cell/FeedCell.xib
@@ -44,7 +44,7 @@
 							<object class="IBUILabel" id="571946735">
 								<reference key="NSNextResponder" ref="703497056"/>
 								<int key="NSvFlags">294</int>
-								<string key="NSFrame">{{53, 75}, {94, 21}}</string>
+								<string key="NSFrame">{{53, 77}, {94, 19}}</string>
 								<reference key="NSSuperview" ref="703497056"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="386031461"/>
@@ -107,18 +107,18 @@
 									<string key="name">Helvetica-Bold</string>
 									<string key="family">Helvetica</string>
 									<int key="traits">2</int>
-									<double key="pointSize">13</double>
+									<double key="pointSize">14</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica-Bold</string>
-									<double key="NSSize">13</double>
+									<double key="NSSize">14</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
 							<object class="IBUILabel" id="460381817">
 								<reference key="NSNextResponder" ref="703497056"/>
 								<int key="NSvFlags">294</int>
-								<string key="NSFrame">{{53, 27}, {181, 39}}</string>
+								<string key="NSFrame">{{53, 31}, {181, 43}}</string>
 								<reference key="NSSuperview" ref="703497056"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="571946735"/>
@@ -131,14 +131,14 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">Jenny 猜对了我的画Jenny 猜对了我的画Jenny 猜对了我的画</string>
+								<string key="IBUIText">Jenny 猜对了我的画Jenny 猜对了我的画Jenny 猜对了我的画Jenny 猜对了我的画Jenny 猜对了我的画Jenny 猜对了我的画</string>
 								<reference key="IBUITextColor" ref="116394943"/>
 								<nil key="IBUIHighlightedColor"/>
 								<string key="IBUIShadowOffset">{0, 1}</string>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 								<float key="IBUIMinimumFontSize">10</float>
-								<int key="IBUINumberOfLines">2</int>
+								<int key="IBUINumberOfLines">3</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">1</int>
 									<double key="pointSize">12</double>
@@ -152,7 +152,7 @@
 							<object class="IBUILabel" id="386031461">
 								<reference key="NSNextResponder" ref="703497056"/>
 								<int key="NSvFlags">291</int>
-								<string key="NSFrame">{{185, 75}, {123, 21}}</string>
+								<string key="NSFrame">{{185, 77}, {123, 19}}</string>
 								<reference key="NSSuperview" ref="703497056"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="594969052"/>
@@ -341,7 +341,7 @@
 					<string key="superclassName">PPTableViewCell</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="descLabel">UILabel</string>
-						<string key="drawImageView">HJManagedImageV</string>
+						<string key="drawImageView">UIImageView</string>
 						<string key="guessStatLabel">UILabel</string>
 						<string key="timeLabel">UILabel</string>
 						<string key="userNameLabel">UILabel</string>
@@ -353,7 +353,7 @@
 						</object>
 						<object class="IBToOneOutletInfo" key="drawImageView">
 							<string key="name">drawImageView</string>
-							<string key="candidateClassName">HJManagedImageV</string>
+							<string key="candidateClassName">UIImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="guessStatLabel">
 							<string key="name">guessStatLabel</string>
@@ -371,14 +371,6 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/FeedCell.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">HJManagedImageV</string>
-					<string key="superclassName">UIView</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HJManagedImageV.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
