--- a/Draw/Controller/Home/Menu/MenuButton.xib
+++ b/Draw/Controller/Home/Menu/MenuButton.xib
@@ -34,13 +34,14 @@
 			</object>
 			<object class="IBUIView" id="951478252">
 				<reference key="NSNextResponder"/>
-				<int key="NSvFlags">292</int>
+				<int key="NSvFlags">316</int>
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIButton" id="370661268">
 						<reference key="NSNextResponder" ref="951478252"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">301</int>
 						<string key="NSFrameSize">{107, 112}</string>
 						<reference key="NSSuperview" ref="951478252"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="612143546"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="326890739">
 							<int key="NSColorSpace">3</int>
@@ -82,9 +83,10 @@
 					</object>
 					<object class="IBUILabel" id="655745263">
 						<reference key="NSNextResponder" ref="951478252"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">301</int>
 						<string key="NSFrame">{{0, 78}, {107, 20}}</string>
 						<reference key="NSSuperview" ref="951478252"/>
+						<reference key="NSWindow"/>
 						<reference key="IBUIBackgroundColor" ref="326890739"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -113,9 +115,10 @@
 					</object>
 					<object class="IBUIButton" id="612143546">
 						<reference key="NSNextResponder" ref="951478252"/>
-						<int key="NSvFlags">-2147483356</int>
+						<int key="NSvFlags">-2147483347</int>
 						<string key="NSFrame">{{62, 20}, {25, 25}}</string>
 						<reference key="NSSuperview" ref="951478252"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="655745263"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -143,6 +146,7 @@
 				</array>
 				<string key="NSFrameSize">{107, 112}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="370661268"/>
 				<reference key="IBUIBackgroundColor" ref="326890739"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -239,7 +243,53 @@
 			<nil key="sourceID"/>
 			<int key="maxID">10</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">FontLabel</string>
+					<string key="superclassName">UILabel</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/FontLabel.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">HKGirlFontLabel</string>
+					<string key="superclassName">FontLabel</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/HKGirlFontLabel.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">MenuButton</string>
+					<string key="superclassName">UIView</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="badge">UIButton</string>
+						<string key="button">UIButton</string>
+						<string key="title">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="badge">
+							<string key="name">badge</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="button">
+							<string key="name">button</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="title">
+							<string key="name">title</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MenuButton.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
