--- a/Draw/Controller/Common/InputDialog.xib
+++ b/Draw/Controller/Common/InputDialog.xib
@@ -46,7 +46,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{290, 180}</string>
 								<reference key="NSSuperview" ref="843572510"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="183721688"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -60,7 +59,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{50, 14}, {190, 41}}</string>
 								<reference key="NSSuperview" ref="843572510"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="754622012"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -92,7 +90,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{20, 67}, {250, 35}}</string>
 								<reference key="NSSuperview" ref="843572510"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="234037166"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="446577435">
 									<int key="NSColorSpace">3</int>
@@ -133,7 +130,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{23, 117}, {83, 41}}</string>
 								<reference key="NSSuperview" ref="843572510"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="404016124"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -158,7 +154,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{187, 117}, {83, 41}}</string>
 								<reference key="NSSuperview" ref="843572510"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -173,7 +168,6 @@
 						</array>
 						<string key="NSFrame">{{15, 20}, {290, 180}}</string>
 						<reference key="NSSuperview" ref="777798319"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="367051569"/>
 						<reference key="IBUIBackgroundColor" ref="446577435"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -181,7 +175,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="843572510"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -353,96 +346,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">51</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CommonInfoView</string>
-					<string key="superclassName">UIView</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">contentView</string>
-						<string key="NS.object.0">UIView</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">contentView</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">contentView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CommonInfoView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">FontButton</string>
-					<string key="superclassName">UIGlossyButton</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FontButton.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">InputDialog</string>
-					<string key="superclassName">CommonInfoView</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="clickCancelButton:">id</string>
-						<string key="clickOkButton:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="clickCancelButton:">
-							<string key="name">clickCancelButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="clickOkButton:">
-							<string key="name">clickOkButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="bgView">UIImageView</string>
-						<string key="cancelButton">FontButton</string>
-						<string key="okButton">FontButton</string>
-						<string key="targetTextField">UITextField</string>
-						<string key="titleLabel">FontButton</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="bgView">
-							<string key="name">bgView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cancelButton">
-							<string key="name">cancelButton</string>
-							<string key="candidateClassName">FontButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="okButton">
-							<string key="name">okButton</string>
-							<string key="candidateClassName">FontButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="targetTextField">
-							<string key="name">targetTextField</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">FontButton</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/InputDialog.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">UIGlossyButton</string>
-					<string key="superclassName">UIButton</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/UIGlossyButton.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
