--- a/Draw/Controller/Common/RoomPasswordDialog.xib
+++ b/Draw/Controller/Common/RoomPasswordDialog.xib
@@ -47,7 +47,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{0, -13}, {290, 215}}</string>
 								<reference key="NSSuperview" ref="355607086"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="521410108"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -61,7 +60,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{185, 142}, {84, 37}}</string>
 								<reference key="NSSuperview" ref="355607086"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -91,7 +89,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{20, 142}, {84, 37}}</string>
 								<reference key="NSSuperview" ref="355607086"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="843693262"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -109,7 +106,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{104, 48}, {166, 31}}</string>
 								<reference key="NSSuperview" ref="355607086"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="744231171"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="718399118">
 									<int key="NSColorSpace">3</int>
@@ -151,7 +147,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{104, 100}, {166, 31}}</string>
 								<reference key="NSSuperview" ref="355607086"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="429406008"/>
 								<reference key="IBUIBackgroundColor" ref="718399118"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -177,7 +172,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{50, -2}, {190, 37}}</string>
 								<reference key="NSSuperview" ref="355607086"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="838819293"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -202,7 +196,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{15, 48}, {89, 32}}</string>
 								<reference key="NSSuperview" ref="355607086"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="533475413"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -236,7 +229,6 @@
 								<int key="NSvFlags">293</int>
 								<string key="NSFrame">{{15, 100}, {89, 32}}</string>
 								<reference key="NSSuperview" ref="355607086"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="13498174"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -259,7 +251,6 @@
 						</array>
 						<string key="NSFrame">{{15, 45}, {290, 235}}</string>
 						<reference key="NSSuperview" ref="353947277"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="486647150"/>
 						<reference key="IBUIBackgroundColor" ref="718399118"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -267,7 +258,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="355607086"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -492,128 +482,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">111</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CommonInfoView</string>
-					<string key="superclassName">UIView</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">contentView</string>
-						<string key="NS.object.0">UIView</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">contentView</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">contentView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CommonInfoView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">FontButton</string>
-					<string key="superclassName">UIGlossyButton</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FontButton.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">InputDialog</string>
-					<string key="superclassName">CommonInfoView</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="clickCancelButton:">id</string>
-						<string key="clickOkButton:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="clickCancelButton:">
-							<string key="name">clickCancelButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="clickOkButton:">
-							<string key="name">clickOkButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="bgView">UIImageView</string>
-						<string key="cancelButton">FontButton</string>
-						<string key="okButton">FontButton</string>
-						<string key="targetTextField">UITextField</string>
-						<string key="titleLabel">FontButton</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="bgView">
-							<string key="name">bgView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cancelButton">
-							<string key="name">cancelButton</string>
-							<string key="candidateClassName">FontButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="okButton">
-							<string key="name">okButton</string>
-							<string key="candidateClassName">FontButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="targetTextField">
-							<string key="name">targetTextField</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">FontButton</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/InputDialog.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">RoomPasswordDialog</string>
-					<string key="superclassName">InputDialog</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="contentBackground">UIImageView</string>
-						<string key="passwordField">UITextField</string>
-						<string key="passwordLabel">UILabel</string>
-						<string key="roomNameLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="contentBackground">
-							<string key="name">contentBackground</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="passwordField">
-							<string key="name">passwordField</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="passwordLabel">
-							<string key="name">passwordLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="roomNameLabel">
-							<string key="name">roomNameLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/RoomPasswordDialog.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">UIGlossyButton</string>
-					<string key="superclassName">UIButton</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/UIGlossyButton.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
